[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 39.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Button" type="Button" parent="Panel/HBoxContainer"]
margin_right = 53.0
margin_bottom = 23.0
text = "Levels"

[node name="LevelNumberLabel" type="Label" parent="Panel/HBoxContainer"]
margin_left = 57.0
margin_top = 4.0
margin_right = 103.0
margin_bottom = 18.0
text = "Level 1"

[node name="ExitLevelConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -29.0
margin_right = -32.0
margin_bottom = -29.0
rect_min_size = Vector2( 400, 140 )
dialog_text = "Do you want to exit this level?"

[connection signal="pressed" from="Panel/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="confirmed" from="ExitLevelConfirmationDialog" to="." method="_on_ExitLevelConfirmationDialog_confirmed"]
